deployment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      priorityClassName: high-priority  # Set a priority class for the pod
      containers:
        - name: postgres
          image: umang2001/blogapplication:postgresimage
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: userservices
spec:
  selector:
    app: userservices
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP   # Change to ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservices
  template:
    metadata:
      labels:
        app: userservices
    spec:
      containers:
        - name: userservices
          image: umang2001/blogapplication:userimage
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: blogservices
spec:
  selector:
    app: blogservices
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: ClusterIP   # Change to ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blogservices
  template:
    metadata:
      labels:
        app: blogservices
    spec:
      containers:
        - name: blogservices
          image: umang2001/blogapplication:blogimage
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: commentservices
spec:
  selector:
    app: commentservices
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
  type: ClusterIP   # Change to ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commentservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commentservices
  template:
    metadata:
      labels:
        app: commentservices
    spec:
      containers:
        - name: commentservices
          image: umang2001/blogapplication:commentimage
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: imageservices
spec:
  selector:
    app: imageservices
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8080
  type: ClusterIP   # Change to ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imageservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imageservices
  template:
    metadata:
      labels:
        app: imageservices
    spec:
      containers:
        - name: imageservices
          image: umang2001/blogapplication:imageimage
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservices
spec:
  selector:
    app: frontendservices
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontendservices
  template:
    metadata:
      labels:
        app: frontendservices
    spec:
      containers:
        - name: frontendservices
          image: umang2001/blogapplication:frontendimage
          ports:
            - containerPort: 80
